plugins/woocommerce-admin/client/products/product-form-actions.scss
$gutenberg-blue: var(--wp-admin-theme-color);
$gutenberg-blue-darker: var(--wp-admin-theme-color-darker-20);

.woocommerce-product-form-actions {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: flex-end;
	padding-right: $gap-smaller;

	@include breakpoint( '<782px' ) {
		position: fixed;
		bottom: 0;
		left: 0;
		width: 100%;
		background: $white;
		padding: $gap;
		border-top: 1px solid $gray-200;

		.components-button-group {
			width: 100%;
			> button {
				width: 100%;
			}
		}
	}

	> .components-button {
		margin-right: $gap-smaller;
	}

	.components-button:not(.is-primary):not(.is-destructive) {
		color: $gutenberg-blue;

		&:hover {
			color: $gutenberg-blue-darker;
		}
	}

	&__publish-button-group {
		display: flex;

		> :not(:last-child) {
			margin-right: 1px;
		}

		.components-button.is-primary {
			box-shadow: none;
		}

		.components-menu-group .components-button {
			box-shadow: none;
		}
	}
}

@include breakpoint( '<782px' ) {
	.woocommerce-layout {
		margin-bottom: calc(70px + $gap); // Product actions height + gap.
	}
}

